# ai-document-analyzer

./: .env.example  .gitignore  README.md  debug_llm.py  pyproject.toml
knowledge/: user_preference.txt
src/pdf_rag/: crew.py  main.py
src/pdf_rag/config/: agents.yaml  tasks.yaml
src/pdf_rag/tools/: custom_tool.py
