[project]
name = "pdf_rag"
version = "0.1.0"
description = "pdf_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "crewai[litellm,tools]==1.11.0",
    "litellm>=1.82.6",
    "pdfplumber>=0.11.9",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
pdf_rag = "pdf_rag.main:run"
run_crew = "pdf_rag.main:run"
train = "pdf_rag.main:train"
replay = "pdf_rag.main:replay"
test = "pdf_rag.main:test"
run_with_trigger = "pdf_rag.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
